package blackhole;

option java_package = "com.dp.blackhole.protocol.control";
option java_outer_classname = "AssignConsumerPB";

message AssignConsumer {

    message PartitionOffset {
        required string brokerString = 1;
        required string partitionName = 2;
        required int64 end_offset = 3;
        optional int64 committed_offset = 4;
    }

    required string group = 1;
    required string topic = 2;
    required string consumerIdString = 3;
    repeated PartitionOffset partitionOffsets = 4;
}

