package blackhole;

option java_package = "com.dp.blackhole.common.gen";
option java_outer_classname = "ColNodeRegPB";

message ColNodeReg{
    required int32 port = 1;
}