package blackhole;

option java_package = "com.dp.blackhole.protocol.control";
option java_outer_classname = "ConfReqPB";

message ConfReq{
    optional string topic = 1;
}