package blackhole;

option java_package = "com.dp.blackhole.protocol.control";
option java_outer_classname = "DumpAppPB";

message DumpApp {
    required string app_name = 1;
}