package blackhole;

option java_package = "com.dp.blackhole.protocol.control";
option java_outer_classname = "DumpReplyPB";

message DumpReply{
    required string reply = 1;
}