package blackhole;

option java_package = "com.dp.blackhole.common.gen";
option java_outer_classname = "OffsetCommitPB";

message OffsetCommit {
    required string topic = 1;
    required string partition = 2;
    required string consumerIdString = 3;
    required int64  offset = 4;
}

