package blackhole;

option java_package = "com.dp.blackhole.protocol.control";
option java_outer_classname = "ReadyStreamPB";

message ReadyStream {
    required string topic = 1;
    optional string partitionId = 2;
    optional string broker_server = 3;
    optional int64 period = 4;
    optional int64 connectedTs = 5;
}